[tool.poetry]
name = "one-billion-row-challenge-python"
version = "0.1.0"
description = ""
authors = ["daniel-henrique-calado <danielcalado94@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
